[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/Game.gd" type="Script" id=1]
[ext_resource path="res://objects/normalPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Jumper.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/jump2.ogg" type="AudioStream" id=5]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="platforms" type="Node" parent="."]

[node name="normalPlatform" parent="platforms" instance=ExtResource( 2 )]
position = Vector2( 365, 1141 )

[node name="Jumper" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 1040 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="soundEffects_container" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="soundEffects_container"]
stream = ExtResource( 5 )

[connection signal="body_entered" from="platforms/normalPlatform" to="." method="jumper_on_normal_platform"]
[connection signal="screen_exited" from="platforms/normalPlatform" to="." method="_on_platform_screen_exited"]
[connection signal="gameover" from="Jumper" to="." method="gameover"]
